# swap-contract

./: .gitignore  Cargo.toml  Changelog.md  LICENSE  README.md  build_release.sh  copy_to_devnet_setup.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config
.github/workflows/: coverage.yml  rust.yaml
contracts/swap/: Cargo.toml  msg.rs
contracts/swap/src/: admin.rs  contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  queries.rs  state.rs  swap.rs  types.rs
contracts/swap/src/testing/: authz_tests.rs  config_test.rs  config_tests.rs  integration_logic_tests.rs  integration_realistic_tests.rs  integration_realistic_tests_exact_quantity.rs  integration_realistic_tests_min_quantity.rs  integration_tests.rs  migration_test.rs  mod.rs  queries_tests.rs  storage_test.rs  storage_tests.rs  swap_tests.rs  test_utils.rs
contracts/swap/src/testing/integration_tests/: integration_logic_tests.rs  integration_realistic_tests_exact_quantity.rs  mod.rs
contracts/swap/src/testing/test_artifacts/: swap-contract-v100.wasm  swap_contract-v101.wasm
docs/: admin.md  examples.sh
