[workspace]
members  = [ "contracts/*" ]
resolver = "2"

[profile.release.package.injective-cosmwasm]
codegen-units = 1
incremental   = false

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = 'abort'
rpath            = false

[patch.crates-io]
#cw-multi-test = { path = "../cw-multi-test" }
#cw-multi-test = { git = "https://github.com/InjectiveLabs/cw-multi-test.git", branch ="feature/custom_address_generator" }
