[workspace]
members  = [ "contracts/*" ]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
cosmwasm-schema     = { version = "2.1.1" }
cosmwasm-std        = { version = "2.1.0", features = [ "abort", "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4", "iterator", "stargate" ] }
cw-storage-plus     = { version = "2.0.0" }
cw-utils            = { version = "2.0.0" }
cw2                 = { version = "2.0.0" }
injective-cosmwasm  = { version = "0.3.3" }
injective-math      = { version = "0.3.3" }
injective-std       = { version = "1.16.0-beta.2" }
injective-test-tube = { version = "1.16.0-beta.3" }
injective-testing   = { version = "1.1.11" }
prost               = { version = "0.13.5" }
schemars            = { version = "0.8.16", features = [ "enumset" ] }
serde               = { version = "1.0.193", default-features = false, features = [ "derive" ] }
serde-json-wasm     = { version = "1.0.1" }
serde_json          = { version = "1.0.120" }
test-tube-inj       = { version = "2.0.7" }
thiserror           = { version = "2.0.12" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = 'abort'
rpath            = false
