[package]
authors = [ "Markus Waas <markus@injectivelabs.org>" ]
edition = "2021"
name    = "swap-contract"
version = "1.1.0"

exclude = [
 # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
 "contract.wasm",
 "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
library = [  ]

[dependencies]
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw-storage-plus    = { workspace = true }
cw-utils           = { workspace = true }
cw2                = { workspace = true }
injective-cosmwasm = { workspace = true }
injective-math     = { workspace = true }
injective-std      = { workspace = true }
prost              = { workspace = true }
schemars           = { workspace = true }
serde              = { workspace = true }
serde-json-wasm    = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
injective-std       = { workspace = true }
injective-test-tube = { workspace = true }
injective-testing   = { workspace = true }
test-tube-inj       = { workspace = true }
